CHANGELOG 
$Id: CHANGELOG.txt,v 1.6 2005/05/09 21:20:21 k4st Exp $

09/05/2005 - added disallowed usernames management (admin/users.class.php)
09/05/2005 - added full registration template(s)
07/05/2005 - finished the Admin Profile fields section
07/05/2005 - added the Database::Query and Database::alterTable functions (sqlite.php/mysql.php)
02/05/2005 - ** removed the secondary measure for gc in session.php
02/05/2005 - made the findpost.php page
02/05/2005 - added reply deleting and editing
02/05/2005 - moved language files around
30/04/2005 - added reply adding and previewing (replies.class.php)
30/04/2005 - added reply adding (newreply.php)
25/04/2005 - added delete topic class (topics.class.php)
25/04/2005 - added edit topic class (topics.class.php)
23/04/2005 - added remove draft class (topics.class.php)
23/04/2005 - updated the bbcode parser (bbcode.php)
23/04/2005 - added post preview support for topics (topics.class.php)
23/04/2005 - moved all of the buttons into the 'english' folder under language (Images)
22/04/2005 - changed the way the bbcode parser looks at most things (bbcode.php)