@@ -1,6 +1,8 @@
 CHANGELOG 
-$Id: CHANGELOG.txt,v 1.6 2005/05/09 21:20:21 k4st Exp $
+$Id: CHANGELOG.txt,v 1.7 2005/05/12 01:41:44 k4st Exp $
 
+11/05/2005 - added flood protection, constant in the common.php
+11/05/2005 - fixed the problem with forum links, etc
 09/05/2005 - added disallowed usernames management (admin/users.class.php)
 09/05/2005 - added full registration template(s)
 07/05/2005 - finished the Admin Profile fields section
